syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.dataaccess.protobuf";

service UserService{
  rpc CreateUser(User) returns (User);
  rpc GetUsers(Void) returns (UsersExist);
}

message User{
  string username = 1;
  string password = 2;
  string f_name = 3;
  string l_name = 4;
  int32 credits = 5;
  string type = 6;
}

message UsersExist{
  repeated User users = 1;
}

message Void{

}